using Microsoft.EntityFrameworkCore;
using SEM5_PI_WEBAPI.Domain.StorageAreas;
using SEM5_PI_WEBAPI.Domain.ValueObjects;
using SEM5_PI_WEBAPI.Infraestructure.Shared;

namespace SEM5_PI_WEBAPI.Infraestructure.StorageAreas;

public class StorageAreaRepository : BaseRepository<StorageArea,StorageAreaId>, IStorageAreaRepository
{
    private readonly DddSample1DbContext _context;
    
    public StorageAreaRepository(DddSample1DbContext context) : base(context.StorageArea)
    {
        _context = context;
    }

    public async Task<StorageArea?> GetByNameAsync(string name)
    {
        return await _context.StorageArea.FirstOrDefaultAsync(x => x.Name.ToLower().Trim() == name.ToLower().Trim());
    }
    
}